Atomia Public Order Page v15.9
2015-05-08 OScar Linderholm <oscar@atomia.com>
	- [FIX] Added domain name validation when registering new domain names.

2015-05-05 Ivan Kustera <ivan@atomia.com>
	- [FIX] Fixed package loading to use selected language for names and descriptions.

Atomia Public Order Page v15.3
2015-03-31 Oscar Linderholm <oscar@atomia.com>
	* [IMPROVEMENT] Updated Atomia.Common to include refactored PhoneCodePair code.

2015-02-19 Ivan Kustera <ivan@atomia.com>
	- [IMPROVEMENT] Modified SubmitForm model to enable replacing for ZIP code fields where it is configured in validation configuration.

2015-02-06 Ivan Kustera <ivan@atomia.com>
	- [FIX] Fixed setting of payment method for new orders.
	- [FIX] Fixed WorldPay plugin names.
	- [FIX] Removed PayExConfirmRedirect action from controller since it is not used.
	- [IMPROVEMENT] Modified PayPal confirmation page and actions to support canceling on both PayPal and our confirmation pages.

2015-01-19 Ivan Kustera <ivan@atomia.com>
	- [NEW] Added support for shop feature:
		- Updated Web.Plugin dlls with changes made for product provider
		- Fixed usages of obsolete methods
		- Added unity configuration for resolving products provider
		- Removed usages of old resource based product names and descriptions
		- Changed reseller loading to fetch default reseller if reseller is not found by url. When reseller data is requested, if reseller is not in loaded, exception is thrown
	
2014-10-20 Daniel Persson <daniel.persson@atomia.com>
	* [FIX] Fixed Cyprus and Ireland VAT number validation.
	
2014-09-18 Daniel Persson <daniel@atomia.com>
	- [FIX] Fixed inadvertently removed terms checkbox validation.

2014-09-17 Oscar Linderholm <oscar@atomia.com>
	- [FIX] Fixed broken css include paths and added missing ie7.css

Atomia Public Order Page v14.9
2014-08-22 Daniel Persson <daniel.persson@atomia.com>
	- [FIX] Updated validation plugin for product category based validation performance changes.